--- a/Snake.html
+++ b/Snake.html
@@ -2,17 +2,17 @@
 <html>
     <head>
         <title> "Snake game" </title>
+        <style>
+            canvas {
+                display: block;
+                border: 1px solid black;
+            }
+        </style>
     </head>
-
     <body>
-        <canvas id="mainCanvas" width="500" height="500"></canvas>
-        <script>
-            const canvas_border_color = 'black';
-            const canvas_background_color = 'white';
-
-            var mainCanvas = document.getElementById("mainCanvas");
+        <canvas id="mainCanvas"></canvas>
+        <script src="index.js">
             
-            var ctx = mainCanvas.m
         </script>
     </body>
 </html>
